--- a/index.html
+++ b/index.html
@@ -356,64 +356,80 @@
 							<div class="row row-items">
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
@@ -424,64 +440,80 @@
 							<div class="row row-items">
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
 								</div>
 								<div class="col-lg-3 col-md-3 col-sm-6">
 									<div class="box-relative">
-										<div class="item-img"></div>
-										<h2>Azul Seguros</h2>
+										<div class="item-img">
+											<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+										</div>
+										<h2>Allianz</h2>
 										<p>+55 43 3132-2070</p>
 										<button>Ir ao site</button>
 									</div>
@@ -493,8 +525,10 @@
 					<div id="carousel-seguradoras-associadas-mobile" class="owl-carousel owl-theme carousel-default visible-xs visible-sm">
 						<div class="item">
 							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
+								<div class="item-img">
+									<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz"/>
+								</div>
+								<h2>Allianz</h2>
 								<p>+55 43 3132-2070</p>
 								<button>Ir ao site</button>
 							</div>
@@ -517,7 +551,8 @@
 						</div>
 						<div class="item">
 							<div class="box-relative">
-								<div class="item-img"></div>
+								<div class="item-img">
+								</div>
 								<h2>Azul Seguros</h2>
 								<p>+55 43 3132-2070</p>
 								<button>Ir ao site</button>
