--- a/index.html
+++ b/index.html
@@ -535,16 +535,10 @@
 						</div>
 						<div class="item">
 							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
-								<p>+55 43 3132-2070</p>
-								<button>Ir ao site</button>
-							</div>
-						</div>
-						<div class="item">
-							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
+								<div class="item-img">
+									<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz"/>
+								</div>
+								<h2>Allianz</h2>
 								<p>+55 43 3132-2070</p>
 								<button>Ir ao site</button>
 							</div>
@@ -552,24 +546,39 @@
 						<div class="item">
 							<div class="box-relative">
 								<div class="item-img">
+									<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz"/>
 								</div>
-								<h2>Azul Seguros</h2>
+								<h2>Allianz</h2>
 								<p>+55 43 3132-2070</p>
 								<button>Ir ao site</button>
 							</div>
 						</div>
 						<div class="item">
 							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
+								<div class="item-img">
+									<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+								</div>
+								<h2>Allianz</h2>
 								<p>+55 43 3132-2070</p>
 								<button>Ir ao site</button>
 							</div>
 						</div>
 						<div class="item">
 							<div class="box-relative">
-								<div class="item-img"></div>
-								<h2>Azul Seguros</h2>
+								<div class="item-img">
+									<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz"/>
+								</div>
+								<h2>Allianz</h2>
+								<p>+55 43 3132-2070</p>
+								<button>Ir ao site</button>
+							</div>
+						</div>
+						<div class="item">
+							<div class="box-relative">
+								<div class="item-img">
+									<img src="./assets/images/lien-logo-alianz.svg" alt="Logo Alianz" />
+								</div>
+								<h2>Allianz</h2>
 								<p>+55 43 3132-2070</p>
 								<button>Ir ao site</button>
 							</div>
