Ajuste Banner Inicial

--- a/index.html
+++ b/index.html
@@ -107,8 +107,17 @@
 			</div>
 		</nav>
 		<main>
+			<!-- Banner -->
+			<section id="banner">
+				<div class="box-banner">
+					<h1>Olá, estamos na BF</h1>
+					<h2>Agora a LIEN está com uma nova parceria com a BF</h2>
+					<p>A diferença de cotações entre bancos, corretoras e casas de câmbio pode chegar a 37%. A Câmbio Store reúne todas as opções
+					em um único lugar para facilitar a comparação dos valores e a troca de moeda estrangeira.</p>
+				</div>
+			</section>
 			<!-- Seja um Franqueado -->
-			<section id="seja-um-franqueado" data-stellar-background-ratio="0.1">
+			<section id="seja-um-franqueado">
 				<div class="decoration-1 decoration" data-stellar-ratio="2"></div>
 				<div class="decoration-2 decoration" data-stellar-ratio="1.5"></div>
 				<div class="decoration-3 decoration" data-stellar-ratio="3"></div>
