--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 			<!-- Banner -->
 			<section id="banner">
 				<div class="box-banner">
-					<h1>Olá, estamos na BF</h1>
-					<h2>Agora a LIEN está com uma nova parceria com a BF</h2>
-					<p>A diferença de cotações entre bancos, corretoras e casas de câmbio pode chegar a 37%. A Câmbio Store reúne todas as opções
+					<h1 class="animation-1">Olá, estamos na BF</h1>
+					<h2 class="animation-4">Agora a LIEN está com uma nova parceria com a BF</h2>
+					<p class="animation-3">A diferença de cotações entre bancos, corretoras e casas de câmbio pode chegar a 37%. A Câmbio Store reúne todas as opções
 					em um único lugar para facilitar a comparação dos valores e a troca de moeda estrangeira.</p>
 				</div>
 			</section>
